force-app/main/default/objects/DM_Multi_Step_Loan_Setup__c/DM_Multi_Step_Loan_Setup__c.object-meta.xml
<CustomObject>
    <label>DM Rate Schedule Setup</label>
    <nameField>
        <label>DM Rate Schedule Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Rate Schedule Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>