force-app/main/default/objects/DM_Multi_Step_Loan_Setup__c/fields/DM_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate__c</fullName>
    <label>DM Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>