force-app/main/default/objects/DM_Multi_Step_Loan_Setup__c/fields/DM_Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan Account</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Rate Schedule Setups</relationshipLabel>
    <relationshipName>DM_Rate_Schedule_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>