force-app/main/default/objects/DM_Multi_Step_Loan_Setup__c/fields/DM_Next_Rate_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Next_Rate_Change_Date__c</fullName>
    <label>DM Next Rate Change Date</label>
    <type>Date</type>
</CustomField>