force-app/main/default/objects/DM_Multi_Step_Loan_Setup__c/fields/DM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>DM_Sequence__c</fullName>
    <label>DM Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>